# xml

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: meta-update.yml
example/: CMakeLists.txt  repr.cpp  xml.cpp
include/: mypkg.h
include/rsl/: json5  repr  serialize  xml
include/rsl/serializer/: annotations.hpp  machinery.hpp  util.hpp
include/rsl/serializer/repr/: serializer.hpp
include/rsl/serializer/xml/: annotations.hpp  document.hpp  serializer.hpp
src/: CMakeLists.txt  mypkg.cpp
test/: CMakeLists.txt  main.cpp
test/serializer/: CMakeLists.txt  basic.cpp
test/xml/: CMakeLists.txt  basic.cpp
test_package/: CMakeLists.txt
test_package/src/: example.cpp
